Incorporacion de comentarios en cada seccion del proyecto

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-
+    <!-- Nav de Contacto -->
   <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
@@ -49,7 +49,7 @@
         </div>
     </div>
 </nav>
-
+    <!-- Formulario de contacto -->
     <section class="container-fluid imagen-contacto pb-5 align-items-center justify-content-center">
         <div class="imagen-contacto__color-contacto"></div>
         <div class="container">
@@ -72,10 +72,7 @@
         </div>
     </section>
 
-
-
-
-
+    <!-- Footer -->
     <footer class="text-center">
         <p>Página diseñada por @ArielOrellana</p>
       </footer>
