--- a/portafolio.html
+++ b/portafolio.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-
+  <!-- Nav de portafolio -->
   <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
@@ -49,7 +49,7 @@
         </div>
     </div>
 </nav>
-
+  <!-- Diseño de la sección portafolio -->
 <section class="container-fluid imagen-portafolio">
     <div class="container div-portafolio">
         <h1 class="text-center display-3 text-light font-weight-bold">Portafolio!</h1>
