--- a/servicios.html
+++ b/servicios.html
@@ -23,8 +23,7 @@
 
 </head>
 <body>
-
-
+    <!-- Nav de Servicios -->
   <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
@@ -52,7 +51,7 @@
         </div>
     </div>
 </nav>
-
+    <!-- Banner principal de sección servicios -->
     <section class="container-fluid trasfondo">
       <div class="row trasfondo__textos">
           <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center align-items-center justify-content-center py-5 text-white display-4 font-weight-bold">Nuestros Servicios de Diseño Web</h1>
@@ -68,7 +67,7 @@
             </div>
         </div>
   </section>
-
+    <!-- Sección donde se describen las características del servicio, mostrando 3 box -->
   <section id="hashServicios" class="container-fluid text-white sectionServicios pb-5 box-imagen-servicios ml-0">
       <section class="container-fluid padding-imagen">
         <h2 class="text-center pb-5 display-4 font-weight-bold">SERVICIOS</h2>
@@ -105,7 +104,7 @@
       </section>
   </section>
 
-
+    <!-- Descripción de precios sobre diseño web -->
   <section class="container-fluid box-imagen-2">
       <h2 class="text-center text-dark display-4 font-weight-bold py-5">PRECIOS DISEÑO WEB</h2>
       <div class="row imagen-2 justify-content-center">
@@ -131,8 +130,9 @@
         </div>
 
       </div>
-
   </section>
+
+    <!-- Sección de precios para Marketing Digital -->
 
   <section class="container-fluid descripcion">
 
@@ -159,25 +159,13 @@
           <p class=" py-4">$950.000</p>
         </div>
       </div>
-
   </section>
-
-  </div>
-
+    <!-- Footer -->
   <footer class="py-5 my-5">
     <h3>Sé parte de nosotros!</h3>
     <p class="footer__p">No pierdas la oportunidad de hacer crecer tu negocio!</p>
     <p>Página diseñada por @ArielOrellana</p>
   </footer>
-
-
-
-
-
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
