Se sustituyen los br del baner por un margin en la seccion nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -60,11 +60,8 @@
       Contáctate con nosotros
     </h2>
     <p class="text-center">Nos dedicaremos a satisfacer tus ideas y llevarlas al mundo digital</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h3 class="text-center font-weight-bold bg-dark rounded-pill py-3">Traspasa tu negocio a la WEB, vende en línea!</h3>
+
+    <h3 class="text-center font-weight-bold bg-dark rounded-pill py-3 mt-5">Traspasa tu negocio a la WEB, vende en línea!</h3>
   </div>
   <video class="videoNosotros__videoUno" muted autoplay loop>
     <source src="assets/video/Pexels Videos 1851768.mp4">
