correccion de ALT, font weight al h1 - comentarios en el index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg py-4">
         <div class="container">
-            <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
+            <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a> <!--Logo, marca con rojo pero esa es la sintaxis del logo-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,7 +61,7 @@
     <div class="container fondo-portada__gradient"></div>
     <div class="fondo-portada__detalles mr-0">
         <div class="fondo-portada__textos-detalles">
-            <h1>Profesionales en el área - Desarrollo web.</h1>
+            <h1 class="font-weight-bold">Profesionales en el área - Desarrollo web.</h1> <!--h1 del index-->
             <p>Páginas web para empresas y emprendedores. Aumenta tus ventas ingresando al mundo digital.</p>
             <button> <a class="textos-detalles__a" href="servicios.html#hashServicios"> Ver más detalles</a></button>
             <button class="boton2"><a class="textos-detalles__a" href="contacto.html">Cotiza con nosotros</a></button>
@@ -92,7 +92,7 @@
     <h2 class="dark-link text-center display-4 font-weight-bold pb-5">¿Por qué es mejor desarrollar sitios Web escribiendo sólo códigos?</h2>
     <div class="row pt-4">
       <div class="col-sm-12 col-md-12 col-lg-6 pb-5 text-center">
-          <img class="img-programing" src="assets/img/undraw_programming_2svr.svg" alt="">
+          <img class="img-programing" src="assets/img/undraw_programming_2svr.svg" alt="Hombre en un computador con varias pantallas">
       </div>
       <div class="texto3 col-sm-12 col-md-12 col-lg-6 dark-link text-center mt-5">
           <p>Prefiere realizar tu sitio web con profesionales sólo utilizando códigos, siempre será la mejor opción, dado que si quieres realizar algo más robusto y de mayor impacto se puede moldear a tus necesidades. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ad dignissimos ut vero aspernatur impedit. Maiores, consequuntur in perspiciatis tenetur laboriosam voluptatibus alias delectus odit sapiente laborum esse. Sed, eligendi.</p>
@@ -100,7 +100,7 @@
     </div>
   </section>
 
-  <!-- Sección Carrusel -->
+  <!-- Sección Carrusel, con 3 imágenes -->
 
   <section class="container row justify-content-center align-items-center mx-auto">
       <h2 class="text-center display-4 font-weight-bold pb-5 text-info">Cotiza nuestros servicios, Desarrollo web, Marketing Digital y Reestructuración de Web</h2>
@@ -113,13 +113,13 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/pexels-serpstat-572056.jpg" class="d-block w-100" alt="carrusel_1">
+                  <img src="assets/img/pexels-serpstat-572056.jpg" class="d-block w-100" alt="Escritorio, computador en una zona de trabajo">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/pexels-negative-space-34125.jpg" class="d-block w-100" alt="carrusel_2">
+                  <img src="assets/img/pexels-negative-space-34125.jpg" class="d-block w-100" alt="Computador un un ipad">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/pexels-pixabay-267401.jpg" class="d-block w-100" alt="carrusel_3">
+                  <img src="assets/img/pexels-pixabay-267401.jpg" class="d-block w-100" alt="ADWORDS">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -135,7 +135,7 @@
       
   </section>
     
-  <!-- Footer y una sección de contacto -->
+  <!-- Footer y dentro del footer una sección de contacto -->
   <footer>
 
 
