Mejora en anidar SCSS _servicios, comentarios en nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -72,7 +72,7 @@
   <!-- Sección donde está el background gradiente e incluye texto, imágenes y números -->
     <section class="container-fluid degradee">
       <section class="container py-5">
-        <h1 class="text-white text-center bg-info py-4 rounded-pill">Grupo de ingenieros especializados en diseño web</h1>
+        <h1 class="text-white text-center bg-info py-4 rounded-pill">Grupo de ingenieros especializados en diseño web</h1> <!--h1 de seccion nosotros-->
 
         <div class="row py-5 align-items-center justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-6"> 
