--- a/servicios.html
+++ b/servicios.html
@@ -54,7 +54,7 @@
     <!-- Banner principal de sección servicios -->
     <section class="container-fluid trasfondo">
       <div class="row trasfondo__textos">
-          <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center align-items-center justify-content-center py-5 text-white display-4 font-weight-bold">Nuestros Servicios de Diseño Web</h1>
+          <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center align-items-center justify-content-center py-5 text-white display-4 font-weight-bold">Nuestros Servicios de Diseño Web</h1> <!--h1 de seccion servicios-->
           <p class="trasfondo__parrafo col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center align-items-center justify-content-center font-weight-bold">Completamente adaptable para cualquier dispositivo móvil. FULL RESPONSIVE</p>
 
             <div class="row container trasfondo__servicios justify-content-center align-items-center">
