uso de grid en los botones de seccion servicios (botones del baner)

--- a/servicios.html
+++ b/servicios.html
@@ -58,10 +58,10 @@
           <p class="trasfondo__parrafo col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center align-items-center justify-content-center font-weight-bold">Completamente adaptable para cualquier dispositivo móvil. FULL RESPONSIVE</p>
 
             <div class="row container trasfondo__servicios justify-content-center align-items-center">
-                <button class="text-center text-white"><a href="servicios.html#hashServicios">
+                <button class="text-center text-white col-sm-2 col-md-2 col-lg-2 col-xl-2 text-center align-items-center justify-content-center"><a href="servicios.html#hashServicios">
                     Diseño Web.</a>
                 </button>
-                <button class="text-center text-white boton-servicios ml-5"><a href="servicios.html#hashServicios">
+                <button class="text-center text-white boton-servicios ml-5 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-center align-items-center justify-content-center"><a href="servicios.html#hashServicios">
                     Marketing Digital.</a>
                 </button>
             </div>
