Correccion de responsive en banner index

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
 
 
   <!-- Banner principal  -->
-  <section class="container-fluid fondo-portada">
-    <div class="container fondo-portada__gradient"></div>
-    <div class="fondo-portada__detalles mr-0">
-        <div class="fondo-portada__textos-detalles">
-            <h1 class="font-weight-bold">Profesionales en el área - Desarrollo web.</h1> <!--h1 del index-->
-            <p>Páginas web para empresas y emprendedores. Aumenta tus ventas ingresando al mundo digital.</p>
-            <button> <a class="textos-detalles__a" href="servicios.html#hashServicios"> Ver más detalles</a></button>
-            <button class="boton2"><a class="textos-detalles__a" href="contacto.html">Cotiza con nosotros</a></button>
-        </div>
-
+  <section class="portada">
+    <h1 class="font-weight-bold">
+      Profesionales en el área - DESARROLLO WEB
+    </h1>
+    <h2 class="portada__h2">
+      Páginas web para empresas y emprendedores. Aumenta tus ventas ingresando al mundo digital.
+    </h2>
+    <div class="portada__botones">
+      <button>Más Detalles</button>
+      <button>Cotiza con nosotros</button>
     </div>
-</section>
+  </section>
   <!-- Sección celeste, textos a los costados e imagen en el centro -->
 
   <section class="section-2 container-fluid pt-5">
