--- a/portafolio.html
+++ b/portafolio.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -52,7 +52,7 @@
   <!-- Diseño de la sección portafolio -->
 <section class="container-fluid imagen-portafolio">
     <div class="container div-portafolio">
-        <h1 class="text-center display-3 text-light font-weight-bold">Portafolio!</h1>
+        <h1 class="text-center text-light font-weight-bold">Portafolio!</h1>
 
     </div>
 </section>
