--- a/servicios.html
+++ b/servicios.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand nav__logo" href="index.html"> < macro-web />  </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
