Modificacion de video por imagen en baner nosotros, correcion de responsive

--- a/nosotros.html
+++ b/nosotros.html
@@ -53,20 +53,11 @@
     </div>
 </nav>
   <!-- Sección Banner y video principal -->
-<section class="container-fluid videoNosotros px-0 mx-0 row justify-content-center align-items-center text-white">
-  <div class="videoNosotros__capaNosotros"></div>
-  <div class="videoNosotros__absoluteTexto col">
-    <h2 class="text-center col display-3">
-      Contáctate con nosotros
-    </h2>
-    <p class="text-center">Nos dedicaremos a satisfacer tus ideas y llevarlas al mundo digital</p>
-
-    <h3 class="text-center font-weight-bold bg-dark rounded-pill py-3 mt-5">Traspasa tu negocio a la WEB, vende en línea!</h3>
-  </div>
-  <video class="videoNosotros__videoUno" muted autoplay loop>
-    <source src="assets/video/Pexels Videos 1851768.mp4">
-  </video>
-</section>
+  <section class="baner-nosotros">
+    <h2>Contáctate con Nosotros</h2>
+    <h3>Nos dedicaremos a satisfacer tus ideas y llevarlas al mundo digital</h3>
+    <p>Traspasa tu negocio a la WEB, vende en línea</p>
+  </section>
 
 
   <!-- Sección donde está el background gradiente e incluye texto, imágenes y números -->
