Quitar Lorem Ipsum

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h2 class="text-center text-white font-weight-bold pb-5">Todo lo que necesites, podemos crearlo!</h2>
         <div class="row align-items-center pt-5 px-3">
           <div class="texto-entre-imagen col-sm-12 col-md-12 col-lg-4 text-dark font-weight-light text-center mt-5">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aperiam autem quibusdam recusandae magnam minima facilis nobis illum debitis amet nesciunt ipsum nemo, ex labore minus. Eaque mollitia nemo nisi.</p>  
+                <p>Al ser un equipo multidisciplinario, nos encargaremos tanto del diseño web como a nivel de código. Esto abarcaría todo aspecto gráfico e inclusive el logo de vuestra empresa. Además disponemos de basta experiencia realizando campañas de Marketing digital, manejando a la perfección la analítica de datos.</p>  
           </div>
           <div class="col-sm-12 col-md-12 col-lg-4 text-white text-center mt-5">
                   <img class="imagen_entre_texto" src="assets/img/dibujo_entre_texto.svg" alt="dibujo_niña_sentada">
           </div>
           <div class="texto-entre-imagen col-sm-12 col-md-12 col-lg-4 text-dark font-weight-light text-center mt-5">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aperiam autem quibusdam recusandae magnam minima facilis nobis illum debitis amet nesciunt ipsum nemo, ex labore minus. Eaque mollitia nemo nisi.</p>  
+                <p>Una de las cosas que nosotros destacamos, es que el código que nosotros creamos, es tuyo!, no somos como las demás empresas que se quedan con el código y posteriormente te lo arriendan. Somos conscientes. Mismo motivo desarrollaremos a nivel profesional el código, siendo robusto y escalable.</p>  
           </div>
         </div>
   </section>
@@ -95,7 +95,7 @@
           <img class="img-programing" src="assets/img/undraw_programming_2svr.svg" alt="Hombre en un computador con varias pantallas">
       </div>
       <div class="texto3 col-sm-12 col-md-12 col-lg-6 dark-link text-center mt-5">
-          <p>Prefiere realizar tu sitio web con profesionales sólo utilizando códigos, siempre será la mejor opción, dado que si quieres realizar algo más robusto y de mayor impacto se puede moldear a tus necesidades. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ad dignissimos ut vero aspernatur impedit. Maiores, consequuntur in perspiciatis tenetur laboriosam voluptatibus alias delectus odit sapiente laborum esse. Sed, eligendi.</p>
+          <p>Prefiere realizar tu sitio web con profesionales sólo utilizando códigos, siempre será la mejor opción, dado que si quieres realizar algo más robusto y de mayor impacto se puede moldear a tus necesidades. Jamás estarás dependiendo de algún plugins o constructores de diseño ni tampoco pagando por actualizaciones. Pagarás sólo una vez y el código tendrá una duración infinita siendo totalmente modificable.</p>
       </div>
     </div>
   </section>
