--- a/nosotros.html
+++ b/nosotros.html
@@ -77,29 +77,29 @@
 
           <!-- última sección del gradiente y la incorporación de los números -->
           <div class="row align-items-center jusify-content-center">
-            <p class="col-sm-12 col-md-12 col-lg-4 text-center degradee__parrafo-nosotros">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat veritatis neque, ipsa recusandae eum suscipit beatae repellendus? Similique iste molestiae hic vel sunt dolor eligendi sit provident mollitia quia. Accusamus!</p>
+            <p class="col-sm-12 col-md-12 col-lg-4 text-center degradee__parrafo-nosotros">Adicionalmente a todo el desarrollo Web, podemos brindarte asesoría empresarial para que no pierdas el foco de tu negocio, así tendrás una alineación profunda en cuanto a lo que vendes, enfocado al target.</p>
 
             <img src="assets/img/undraw_Traveling_re_weve.svg" alt="Marcianos pequeños rondando por el mundo" class="col-sm-12 col-md-12 col-lg-4 text-center">
 
-            <p class="col-sm-12 col-md-12 col-lg-4 text-center degradee__parrafo-nosotros">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat veritatis neque, ipsa recusandae eum suscipit beatae repellendus? Similique iste molestiae hic vel sunt dolor eligendi sit provident mollitia quia. Accusamus!</p>
+            <p class="col-sm-12 col-md-12 col-lg-4 text-center degradee__parrafo-nosotros">Estamos en constante aprendizaje, el mundo del programador y desarrollador no para, mismo motivo nos capacitamos constantemenmte, manteniendo un nivel de profesionalismo global.</p>
           </div>
 
           <div class="row align-items-center jusify-content-center text-center py-5 mt-5">
             <div class="col-sm-12 col-md-6 col-lg-3">
               <img class="img-numero bg-info rounded-circle" src="assets/img/number-one_icon-icons.com_66514.png" alt="Número uno">
-              <p class="numero pt-5 ">Lorem ipsum dolor sit amet.</p>
+              <p class="numero pt-5 ">Grupo de Ingenieros.</p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
               <img class="img-numero" src="assets/img/number-two_icon-icons.com_66513.png" alt="Número dos">
-              <p class="numero pt-5">Lorem ipsum dolor sit amet.</p>
+              <p class="numero pt-5">Sitios escalables</p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
               <img class="img-numero bg-info rounded-circle" src="assets/img/number-three_icon-icons.com_66512.png" alt="Número tres">
-              <p class="numero pt-5">Lorem ipsum dolor sit amet.</p>
+              <p class="numero pt-5">Asesoría empresarial.</p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
               <img class="img-numero" src="assets/img/number-four_icon-icons.com_66511.png" alt="Número cuatro">
-              <p class="numero pt-5">Lorem ipsum dolor sit amet.</p>
+              <p class="numero pt-5">Marketing Digital.</p>
             </div>
           </div>
         
@@ -117,7 +117,7 @@
                 <img class="img-js pr-5 pb-5" src="assets/img/undraw_static_assets_rpm6.svg" alt="Javascript, CSS y HTML">
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 text-white py-5 parrafo-js pr-5">
-                <p>Poseemos el conocimiento y experiencia necesario para satisfacer las necesidades de nuestros clientes. Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo amet sapiente est, optio modi molestias dolores qui autem asperiores in repellat? Nobis doloremque est suscipit tempore veritatis voluptatum rerum!</p>
+                <p>Poseemos el conocimiento y experiencia necesario para satisfacer las necesidades de nuestros clientes. Hemos sido avalado por clientes quienes han tenido un aumento de sus ventas al corto plazo. Dicho anteriormente, estamos en constante aprendizaje de diversos lenguajes de programación, tanto en el Front End como en el Back End, siendo así un equipo Full Stack.</p>
             </div>
         </div>
     </section>
