--- a/servicios.html
+++ b/servicios.html
@@ -107,20 +107,20 @@
         <div class="col-sm-12 col-md-6 col-lg-3 bordes-dos mx-4 py-4 px-3">
             <h2 class="text-center py-3">Emprendedor</h2>
             <p class="text-center">Incluye:</p>
-            <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum eaque dolores id itaque suscipit quae, a dolore error facilis.</p>
+            <p class="text-center">Tendrás un sitio Web totalmente responsivo, con máximo 3 secciones distintas, incluye hosting y mail corporativo.</p>
             <p class="text-center">$150.000</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3 bordes-dos mx-4 py-4 px-3">
             <h2 class="text-center py-3">Empresa</h2>
             <p class="text-center">Incluye:</p>
-            <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum eaque dolores id itaque suscipit quae, a dolore error facilis.</p>
+            <p class="text-center">Sitio con máximo 5 secciones totalmente responsivas, motor de búsqueda en los navegadores, hasta 15 mail corporativos, hosting, asesoría empresarial.</p>
             <p class="text-center">$250.000</p>
             
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3 bordes-dos mx-4 py-4 px-3">
             <h2 class="text-center py-3">Premium</h2>
             <p class="text-center">Incluye:</p>
-            <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum eaque dolores id itaque suscipit quae, a dolore error facilis.</p>
+            <p class="text-center">Sitio dinámico con más de 5 secciones distintas, responsive, hosting, programado con motor de búsqueda en los navegadores, mail ilimitado, asesoría empresarial por 3 meses.</p>
             <p class="text-center">$490.000</p>
         </div>
 
@@ -136,21 +136,21 @@
         <div class="col-sm-12 col-md-6 col-lg-3 mx-4 py-4 px-3 text-center">
           <h3 class=" py-4" >Plan Emprendedor</h3>
           <p>Descripción:</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor vel ratione libero ducimus molestias natus nemo aperiam optio a!</p>
+          <p>Si estás empezando con tu negocio web, esto es para ti. Nos encargaremos de confeccionar campaña en Google Ads enviandote informes</p>
           <p class=" py-4">$350.000</p>
         </div>
   
         <div class="col-sm-12 col-md-6 col-lg-3 mx-4 py-4 px-3 text-center">
           <h3 class=" py-4">Plan Empresa</h3>
           <p>Descripción:</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor vel ratione libero ducimus molestias natus nemo aperiam optio a!</p>
+          <p>Creación de campaña tanto en Google Ads como en Redes Sociales (3 publicaciones semanales), emitiendo informes analíticos con Google Analytics</p>
           <p class=" py-4">$600.000</p>
         </div>
   
         <div class="col-sm-12 col-md-6 col-lg-3 mx-4 py-4 px-3 text-center">
           <h3 class=" py-4">Plan Premium</h3>
           <p>Descripción:</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor vel ratione libero ducimus molestias natus nemo aperiam optio a!</p>
+          <p>Pack completo de Marketing. Campañas Google Ads, Redes Sociales (4 publicaciones a la semana) nosotros crearemos las gráficas y mediciones de métricas por Google Analytics, además estaremos manejando completamente las redes sociales buscando clientes prospectos</p>
           <p class=" py-4">$950.000</p>
         </div>
       </div>
